deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-calculator
  labels:
    app: calculator-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calculator-app
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      containers:
      - name: c_calculator
        image: raemondarellano/my-calculator:1.0.0-16
        ports:
        - containerPort: 80
