service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-calculator
spec:
  selector:
    app: calculator-app
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
